<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".screen.DialogActivity">

    <FrameLayout
        android:id="@+id/frToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/includeToolbar"
            layout="@layout/layout_toolbar" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frToolbar">

        <TextView
            android:id="@+id/btnShowDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_primary"
            android:fontFamily="@font/font_bold"
            android:padding="@dimen/_10sdp"
            android:text="@string/txt_show_dialog"
            android:textColor="@color/onPrimaryColor"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/btnShowDialogFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_btn_primary"
            android:fontFamily="@font/font_bold"
            android:padding="@dimen/_10sdp"
            android:text="@string/txt_show_dialog_fragment"
            android:textColor="@color/onPrimaryColor"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/btnShowBottomSheetDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_btn_primary"
            android:fontFamily="@font/font_bold"
            android:padding="@dimen/_10sdp"
            android:text="@string/txt_show_bottom_sheet_dialog"
            android:textColor="@color/onPrimaryColor"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frToolbar" />

        <TextView
            android:id="@+id/btnShowDialogAnimSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_btn_primary"
            android:fontFamily="@font/font_bold"
            android:padding="@dimen/_10sdp"
            android:text="@string/txt_show_dialog_anim_success"
            android:textColor="@color/onPrimaryColor"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/btnShowDialogAnimFailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_btn_primary"
            android:fontFamily="@font/font_bold"
            android:padding="@dimen/_10sdp"
            android:text="@string/txt_show_dialog_anim_failed"
            android:textColor="@color/onPrimaryColor"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>