<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_dialog_bottom_sheet"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:text="@string/txt_dialog_header"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/font_regular"
                android:text="@string/txt_dialog_body"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/btnAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/bg_btn_primary"
                android:fontFamily="@font/font_medium"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/txt_action"
                android:textColor="@color/onPrimaryColor"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frToolbar" />
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>