<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:text="@string/txt_popup_options"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/btnOption1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/bg_btn_primary"
                android:fontFamily="@font/font_medium"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/txt_option_1"
                android:textColor="@color/onPrimaryColor"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frToolbar" />

            <TextView
                android:id="@+id/btnOption2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/bg_btn_primary"
                android:fontFamily="@font/font_medium"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/txt_option_2"
                android:textColor="@color/onPrimaryColor"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frToolbar" />

            <TextView
                android:id="@+id/btnOption3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/bg_btn_primary"
                android:fontFamily="@font/font_medium"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/txt_option_3"
                android:textColor="@color/onPrimaryColor"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frToolbar" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>