<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_noconect"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/font_bold"
                android:gravity="center"
                android:text="@string/txt_no_internet"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/font_regular"
                android:text="@string/txt_check_your_internet"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/btnWifiSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/bg_btn_primary"
                android:fontFamily="@font/font_medium"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/txt_wifi_settings"
                android:textColor="@color/onPrimaryColor"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frToolbar" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>